deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: art-ui
  name: art-ui
spec:
  selector:
    app: art-ui
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 6006
